WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134139
Database process crashes when multiple transactions attempt to run at once
https://bugs.webkit.org/show_bug.cgi?id=134139
Summary
Database process crashes when multiple transactions attempt to run at once
Vicki Pfau
Reported
2014-06-20 15:48:12 PDT
When multiple IDB transactions attempt to run at once, the database process can crash due to it expecting database processes to be serialized. <
rdar://problem/16123702
>
Attachments
Patch
(6.88 KB, patch)
2014-06-20 16:28 PDT
,
Vicki Pfau
ddkilzer
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Vicki Pfau
Comment 1
2014-06-20 16:28:19 PDT
Created
attachment 233482
[details]
Patch
David Kilzer (:ddkilzer)
Comment 2
2014-06-23 11:03:13 PDT
Comment on
attachment 233482
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=233482&action=review
r=me
> LayoutTests/storage/indexeddb/transaction-overlapping-expected.txt:1 > +Check that read-only transactions within a database can run in parallel.
See comment below.
> LayoutTests/storage/indexeddb/transaction-overlapping.html:9 > +description("Check that read-only transactions within a database can run in parallel.");
This description for the test is inaccurate. It should be something like: description("Check that overlapping, read-only transactions within a database don't crash and run serially.");
Vicki Pfau
Comment 3
2014-06-23 15:39:15 PDT
Committed
r170327
: <
http://trac.webkit.org/changeset/170327
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug